<resources>
    <string name="app_name">Record Keeper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Running">Running</string>
    <string name="running_image_description">Running Image</string>
    <string name="_5km">5km</string>
    <string name="_10km">10km</string>
    <string name="half_marathon">Half Marathon</string>
    <string name="marathon">Marathon</string>
    <string name="Cycling">Cycling</string>
    <string name="CyclingImage">Cycling Image</string>
    <string name="longest_ride">Longest Ride</string>
    <string name="biggest_climb">Biggest Climb</string>
    <string name="best_average_speed">Best Average Speed</string>
    <string name="reset_running_records">Reset Running Records</string>
    <string name="reset_cycling_records">Reset Cycling Records</string>
    <string name="reset_all_records">Reset All Records</string>
    <string name="record_hint">Record</string>
    <string name="date_hint">Date</string>
    <string name="save_buttong_text">Save</string>
    <string name="clear_record_button_text">Clear Record</string>
</resources>