<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bike_heading"
                android:contentDescription="@string/CyclingImage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"

                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/Cycling"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </FrameLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_heading"
            android:padding="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_longest_ride"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/text_view_longest_ride_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/longest_ride"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_view_longest_ride_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22.04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_view_longest_ride_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_longest_ride_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="01/23/2023"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>
                



            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_bigger_climb"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_biggest_climb_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/biggest_climb"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_view_biggest_climb_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22.04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_view_biggest_climb_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_biggest_climb_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="01/23/2023"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>




            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="16dp"
                android:id="@+id/container_average_speed"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_average_speed_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/best_average_speed"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_view_average_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22.04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_view_average_speed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_average_speed_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="01/23/2023"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>




            </androidx.constraintlayout.widget.ConstraintLayout>








        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>